--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ django-celery-beat==2.0.0
 django-crispy-forms==1.9.1
 django-floppyforms==1.9.0
 django-fluent-dashboard==1.0.1
+django-hosts==4.0
 django-js-asset==1.2.2
+django-markdown2==0.3.1
 django-model-utils==4.0.0
 django-notifications-hq==1.6.0
 django-timezone-field==4.0
@@ -23,7 +25,8 @@ html5lib==1.0.1
 importlib-metadata==1.6.0
 jsonfield==3.1.0
 kombu==4.6.8
-Pillow==7.1.2
+markdown2==2.4.0
+Pillow==8.2.0
 pycparser==2.20
 Pyphen==0.9.5
 python-crontab==2.5.1
